# ReLimiter

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ReLimiter v3.7z  adaptive-dlss-scaling-report.md  build.bat  deferred-changes-1-2.md
.github/workflows/: release.yml
backup_dmfg_jit_predictor/spec/: design.md
backup_dmfg_jit_predictor/src/: config.h  scheduler.cpp  streamline_hooks.cpp  streamline_hooks.h
backup_dmfg_jit_predictor_v2/src/: config.cpp  osd.cpp  scheduler.cpp
backup_dmfg_jit_predictor_v3/: CMakeLists.txt
backup_dmfg_jit_predictor_v3/spec/: requirements.md  tasks.md
backup_dmfg_jit_predictor_v3/src/: scheduler.cpp  scheduler.h
backup_dmfg_jit_predictor_v3/tests/: CMakeLists.txt  test_dmfg_output_cap.cpp
backup_dmfg_passthrough/spec/: .config.kiro  design.md  requirements.md  tasks.md
backup_dmfg_passthrough/src/: config.cpp  config.h  enforcement_dispatcher.cpp  fg_divisor.cpp  frame_latency_controller.cpp  osd.cpp  scheduler.cpp  streamline_hooks.cpp  streamline_hooks.h
backup_dmfg_passthrough/tests/: CMakeLists.txt  test_dmfg_detection.cpp
shaders/: lanczos3_horizontal.hlsl  lanczos3_vertical.hlsl
src/: adaptive_smoothing.cpp  adaptive_smoothing.h  baseline.cpp  baseline.h  cadence_meter.cpp  cadence_meter.h  ceiling_margin.cpp  ceiling_margin.h  config.cpp  config.h  correlator.cpp  correlator.h  csv_writer.cpp  csv_writer.h  damping.cpp  damping.h  display_poll_thread.cpp  display_poll_thread.h  display_resolver.cpp  display_resolver.h  display_state.cpp  display_state.h  dllmain.cpp  dlss_k_controller.cpp  dlss_k_controller.h  dlss_lanczos_shader.cpp  dlss_lanczos_shader.h  dlss_mip_corrector.cpp  dlss_mip_corrector.h  dlss_ngx_interceptor.cpp  dlss_ngx_interceptor.h  dlss_presets.cpp  dlss_presets.h  dlss_resolution_math.h  dlss_swapchain_proxy.cpp  dlss_swapchain_proxy.h  enforcement_dispatcher.cpp  enforcement_dispatcher.h  feedback.cpp  feedback.h  (+78 more)
tests/: CMakeLists.txt  test_config_dlss.cpp  test_k_controller.cpp  test_lanczos_kernel.cpp  test_mip_corrector.cpp  test_resolution_math.cpp  test_scheduler_passthrough.cpp  test_scheduler_passthrough.md
